fixed grid on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ h5 {
 }
 
 /* END OF ARROW */
-@media (max-width: 768px) and (min-width:401px) {
+@media (max-width: 768px) {
   .carousel-control-next, .carousel-control-prev {
     top: 92%;
     width: 40%;
@@ -156,10 +156,15 @@ h5 {
   width: 100vw;
 }
 
+.main-body-container .row{
+  width:100vw;
+  margin-left: 0;
+}
+
 .about-us img, .coffee img, .blossom img, .leaf img {
   object-fit: cover;
   width: 100vw;
-  height: 40vh;
+  height: 30vh;
   opacity: 1;
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
@@ -189,10 +194,12 @@ h5 {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
 }
 
 .bot-container span {
   display: flex;
+
 }
 
 .about-us{
